--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document</title> <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -37,14 +37,14 @@
       <h1>MY Projects</h1>
       <h2>First one</h2>
       <img
-        src="53da23176332383.Y3JvcCwxNjE2LDEyNjQsMCww.jpg"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR4zj-M4Wl7qRq1_WtUdQWoUsLc5b6-2KFGRA&s"
         alt=""
         width="300"
         height="300"
       />
       <h2>Second one</h2>
       <img
-        src="Portfolio-of-the-front-end-developer-Olaolu-Olawuyi (1).webp"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShqThefoeupBZJV_VKiFU18yaKmH36Es0i6w&s"
         alt=""
         width="300"
         height="300"
